Fix preprocess script to observe changes in grammar